fix: center help tooltip on mobile phone screens

--- a/src/index.css
+++ b/src/index.css
@@ -593,6 +593,8 @@ input[type=number] {
   .help-tooltip {
     left: 50%;
     transform: translateX(-50%);
+    margin-left: 10px;
+    margin-right: 10px;
     max-width: 90vw;
     font-size: 0.8rem;
     padding: 0.45rem 0.6rem;
